Refactor documentation links and update sidebar structure
- Updated sidebar.ts to correct links for 'Configure Chain' to 'Configure Network' and 'Types' to 'Misc/Types'.
- Added 'idefaultwallet' to .vscode/settings.json for spell checking.
- Adjusted formatting in compatibility.mdx and getting-started.mdx for improved clarity.
- Changed references from 'canary' to 'master' in installation.mdx.
- Removed outdated types.mdx file as part of documentation cleanup.

--- a/pages/docs/getting-started.mdx
+++ b/pages/docs/getting-started.mdx
@@ -85,7 +85,7 @@ const App = () => {
 };
 ```
 
-## 🪝 Use Wallet Capabilities
+## 🪝 Use Wallet Hooks
 After your dapp connects to a supported wallet, your dapp is already supercharged and able 
 to call wallet capabilities.🎉
 
@@ -123,5 +123,5 @@ const App = () => {
 
 Continue to BUIDL your amazing dapp and join the ongoing Movement!
 
-💧 Demo Playground
+## Demo Playground
 Feel free to play with our [Demo Playground](https://kit-demo.razorwallet.xyz/)
