--- a/pages/docs/installation.mdx
+++ b/pages/docs/installation.mdx
@@ -40,7 +40,7 @@ bottom of your HTML file with the following content.
 ## Using Unreleased Commits
 
 If you can't wait for a new release to test the latest features, you can either install 
-from the `canary` tag (tracks the [`main`](https://github.com/razorlabsorg/razorkit/tree/main) branch).
+from the `canary` tag (tracks the [`master`](https://github.com/razorlabsorg/razorkit/tree/master) branch).
 
 :::code-group
 ```bash [pnpm]
