Update sidebar and add new guides for wallet integration
- Corrected the sidebar entry from 'Configure Chain' to 'Configure Network'.
- Introduced a new section for 'Wallet SDK' in the sidebar with an overview link.
- Added comprehensive guides for configuring supported networks and connecting DApps with wallets using Razor Kit.
- Enhanced the 'Customize Wallet List' guide to include detailed usage examples.
- Removed outdated example and getting-started pages to streamline documentation.

--- a/pages/docs/components/connect-button.mdx
+++ b/pages/docs/components/connect-button.mdx
@@ -58,7 +58,7 @@ function App() {
 ```
 
 :::tip
-The error type is customized by Razor Kit. You may want to check [Error Types](/docs/types/#error-types) for details.
+The error type is customized by Razor Kit. You may want to check [Error Types](/docs/misc/types/#error-types) for details.
 :::
 
 ## API
