Update URLs in configuration and documentation
- Changed production base URL in vocs.config.tsx from 'https://kit.razorwallet.kit' to 'https://kit.razorwallet.xyz'.
- Updated the link in getting-started.mdx from 'Example repo' to 'Examples' pointing to the new repository structure for better clarity.

--- a/pages/docs/getting-started.mdx
+++ b/pages/docs/getting-started.mdx
@@ -6,7 +6,7 @@ Try out our kit and connect your dapp in just few seconds. 🪄
 
 ⭐️ Have fun with our [Demo Playground](https://kit-demo.razorwallet.xyz/)
 
-[Example repo](https://github.com/razorlabsorg/wallet-kit-vite-example)
+[Examples](https://github.com/razorlabsorg/razorkit/tree/master/examples)
 
 You can learn more about the rationale behind the project in the [Why Razor Kit](/docs/introduction) section.
 
