Update dependencies and add new hooks documentation
- Upgrade various dependencies to latest versions in package.json and pnpm-lock.yaml
- Add new hook documentation pages for useAbi, useAccount, useChain, and useChainId
- Update sidebar.ts to include new hook documentation links
- Add Leap Wallet to the wallet list in customize-wallet-list.mdx
- Configure Vite development server port in vocs.config.tsx

--- a/pages/docs/guides/customize-wallet-list.mdx
+++ b/pages/docs/guides/customize-wallet-list.mdx
@@ -22,6 +22,7 @@ import {
   BitgetWallet,
   NightlyWallet,
   OkxWallet,
+  LeapWallet,
   IDefaultWallet,
 } from '@razorlabs/razorkit';
 
@@ -37,6 +38,7 @@ ReactDOM.createRoot(document.getElementById('root') as HTMLElement).render(
       BitgetWallet,
       NightlyWallet,
       OkxWallet,
+      LeapWallet,
       // ...
     ]}>
     {/* or just leave it as default which contains all preset wallets */}
